# gato-hep

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
diffcat_optimizer/: data_generation.py  differentiable_categories.py  plotting_utils.py  utils.py
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst
docs/source/api/: data_generation.rst  index.rst  losses.rst  models.rst  plotting_utils.rst  utils.rst
docs/source/examples/: 1D_example.rst  1D_gmm_example.rst  1D_sigmoid_example.rst  bumphunt_example.rst  three_class_softmax_example.rst
docs/source/logos/: generateDarkMode.py
examples/1D_example/: _old_run_toy_example.py  run_example.py  run_gmm_example.py  run_sigmoid_example.py
examples/3D_2signals_softmax_example/: 2D.py  run_example.py
examples/3D_softmax_example/: generate_toy_data.py  run_toy_example.py
examples/5D_2signals_softmax_example/: run_toy_example.py
examples/bumphunt_example/: run_example.py
examples/three_class_softmax_example/: run_example.py
examples/toy_example/: generate_toy_data.py  run_toy_example.py  run_toy_example_GMM.py
examples/tth_th_analysis/: run_tth_th.py
src/gato/: data_generation.py  losses.py  models.py  plotting_utils.py  utils.py
src/gatohep/: __init__.py  data_generation.py  models.py  plotting_utils.py  utils.py
