[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gato"              # distribution name
version = "0.1.0"
description = "GATO: Gradient-based categorization optimization for HEP analyses"
keywords = ["differentiable", "binning", "optimization", "HEP", "significance"]
readme = "README.md"
license = { text="MIT" }
authors = [{name="Florian Mausolf", email="florian.mausolf@rwth-aachen.de" }]

dependencies = [
    "numpy>=1.20",
    "tensorflow>=2.17,<2.20",
    "tensorflow-probability>=0.24",
    "tf_keras==2.19.0",
    "mldtypes>=0.4.1",
    "mplhep",
    "matplotlib>=3.7",
    "scipy",
    "pandas",
    "hist",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gato*"]        # find packages under src/gato

[dependency-groups]
dev = ["pytest", "pytest-cov"]

[project.urls]
"Repository" = "https://github.com/FloMau/gato"

[project.scripts]

[tool.hatch.envs.default]
develop = true
