[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gato-hep"              # distribution name
version = "0.1.0"
description = "GATO: Gradient-based categorization optimization for HEP analyses"
keywords = ["differentiable", "binning", "optimization", "HEP", "significance"]
readme = "README.md"
license = { text="MIT" }
authors = [{name="Florian Mausolf", email="florian.mausolf@rwth-aachen.de" }]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.20",
    "tensorflow>=2.17,<2.20",
    "tensorflow-probability>=0.24",
    "tf_keras==2.19.0",
    "ml_dtypes>=0.4.1",
    "mplhep",
    "matplotlib>=3.7",
    "scipy",
    "pandas",
    "hist",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gatohep*"]        # find packages under src/gatohep

[tool.ruff]
line-length = 88
[tool.ruff.lint]
extend-select = [
  "B",           # flake8-bugbear
  "I",           # isort
  "W",           # flake8-warnings
  "E" ,          # flake8-errors
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "TID251",      # flake8-tidy-imports.banned-api
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
ignore = [
  "PLR",
  "RUF012",
  "EM101",
  "T201"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8"]
docs = [
  "sphinx>=5.0",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "sphinx-autoapi",
  "myst-parser",
  "pydata-sphinx-theme"
]

[project.urls]
"Repository" = "https://github.com/FloMau/gato-hep"

[project.scripts]

[tool.hatch.envs.default]
develop = true
